feat:final version plants

--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -30,18 +30,18 @@ body {
 
 .header {
     background-color: #EDF2EC;
+    height: 150px;
 }
 
 .header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 7.3em;
+    margin: 0 112px;
 }
 
 .logo {
-    margin-top: 8px;
-    margin-left: -8px;
+    margin-top: 22px;
 }
 
 .logo a {
@@ -63,7 +63,7 @@ body {
 }
 
 .logo p:hover {
-    color: #E06733;    
+    color: #E06733;
 }
 
 .header-nav-list {
@@ -73,11 +73,15 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 48px;
-    gap: 48px;
+    gap: 46px;
 }
 
 .header-navigation {
-    margin-top: 36px;
+    margin-top: 28px;
+}
+
+.burger-icon {
+    display: none;
 }
 
 #home {
@@ -102,15 +106,22 @@ body {
 .welcome-wrapper {
     display: flex;
     margin: 0 7.569%;
+    height: 516px;
 }
 
 .img-welcome {
-    margin-top: 11px;
+    margin-top: 29px;
+    width: 100%;
+}
+
+.img-welcome-768 {
+    display: none;
 }
 
 .content-welcome {
     margin-top: 45px;
-    margin-left: 212px;
+    width: 100%;
+    margin-left: 10.1%;
 }
 
 h1 {
@@ -130,7 +141,7 @@ h3 {
     line-height: 35px;
     color: #636060;
     font-weight: normal;
-    margin-top: 45px;
+    margin-top: 44px;
     margin-right: 20px;
 
 }
@@ -166,7 +177,12 @@ h3 {
     display: flex;
     align-items: center;
     margin: 0 7.569%;
-    margin-top: 74px;
+    margin-top: 85px;
+}
+
+.content-about {
+    width: 100%;
+    margin-right: 24%;
 }
 
 h2 {
@@ -175,14 +191,12 @@ h2 {
     line-height: 52px;
     color: #499A18;
     font-weight: normal;
-    margin-right: 155px;
-
 }
 
 .content-about h3 {
-    margin-right: 145px;
     margin-top: 38px;
     line-height: 30px;
+    margin-right: -28%;
 }
 
 .content-about span {
@@ -190,23 +204,28 @@ h2 {
 }
 
 .img-about {
-    margin-top: 7px;
+    width: 100%;
+    margin-top: 8px;
 }
+
+.img-about img {
+    width: 100%;
+}
+
 
 .service {
     background-color: #EDF2EC;
-    margin-top: 103px;
-    height: 81.125em;
+    margin-top: 89px;
 }
 
 .service-wrapper {
-    margin: 0 7.569%;
+    padding-bottom: 120px;
+    margin-right: 110px;
+    margin-left: 108px;
 }
 
 .up {
     display: flex;
-    /* align-items: center;
-    gap: 127px;*/
 }
 
 .caption-service {
@@ -215,22 +234,23 @@ h2 {
 
 .caption-service h2 {
     margin-right: 0;
+    margin-top: 40px;
 }
-
 
 .tablets-service {
     display: flex;
     flex-wrap: wrap;
-    gap: 54px;
+    gap: 53px;
     justify-content: space-between;
-    margin-top: 52px;
+    margin-top: 46px;
 }
 
 .button-service {
-    gap: 38px;
+    gap: 39px;
     display: flex;
-    margin-left: 136px;
-    margin-top: 62px;
+    margin-left: 139px;
+    margin-top: 69px;
+    flex-wrap: wrap;
 }
 
 .button-service button {
@@ -254,15 +274,37 @@ h2 {
     transition: 0.5s;
 }
 
+.button-service button:focus {
+    color: #FFFFFF;
+    background-color: #E06733;
+    transition: 0.5s;
+}
+
+.img768-garden,
+.img768-planting,
+.img768-lawn {
+    display: none;
+}
+
+.card {
+    width: 27%;
+}
+
 .content-card {
     border: 1px solid #E3E1D5;
     border-radius: 20px;
     text-align: center;
     height: 450px;
+    width: 100%;
+}
+
+.card .active {
+    filter: blur(4px);
 }
 
 .content-card img {
     border-radius: 20px 20px 0 0;
+    width: 100%;
 }
 
 .content-card h4 {
@@ -273,14 +315,6 @@ h2 {
     line-height: 20px;
     color: #E06733;
     margin-top: 5px;
-}
-
-.correct-text-right {
-    margin-left: -17px;
-}
-
-.correct-text-left {
-    margin-left: 17px;
 }
 
 .content-card h5 {
@@ -297,9 +331,11 @@ h2 {
     display: flex;
     justify-content: space-between;
     margin: 0 7.569%;
-    gap: 35%;
-    margin-top: 9px;
+    margin-top: 39px;
+    margin-bottom: 104px;
 }
+
+/*accordion*/
 
 .choose-table {
     display: flex;
@@ -308,14 +344,19 @@ h2 {
     justify-content: center;
     border: 1px solid #E3E1D5;
     border-radius: 20px;
-    width: 332px;
-    height: 282px;
-    margin-top: 61px;
+    width: 330px;
+    min-height: 60%;
+    margin-top: 60px;
+    gap: 33px;
+    padding-top: 17px;
+    padding-bottom: 17px;
 }
 
-.choose-table select {
+.select {
+    display: flex;
+    align-items: center;
     width: 250px;
-    height: 50px;
+    height: 48px;
     border-radius: 20px;
     font-family: 'Inter-Bold';
     font-style: normal;
@@ -331,9 +372,109 @@ h2 {
     cursor: pointer;
 }
 
-.choose-table select:hover {
-    background-color: #D6E7D2
+/*.basics .select button .active {
+    border-radius: 20px;
+    color: #000000;
+    background: url("../assets/image/svg/arrow-grey-up-btn.svg") no-repeat 82% center;
+    outline: 0;
+    background-color: #D6E7D2;
+}*/
+
+
+.active,
+.select:hover {
+    background-color: #D6E7D2;
 }
+
+.active,
+.select:active {
+    background: url("../assets/image/svg/arrow-grey-up-btn.svg") no-repeat 82% center;
+    background-color: #D6E7D2;
+    border-radius: 20px 20px 0 0;
+    border-bottom: 0;
+}
+
+.panel {
+    display: none;
+    overflow: hidden;
+    background-color: #D6E7D2;
+    width: 248px;
+    font-family: 'Inter-Regular';
+    font-style: normal;
+    font-size: 10px;
+    line-height: 10px;
+    color: #717171;
+    border: 1px solid #E3E1D5;
+    border-radius: 0 0 20px 20px;
+    border-top: 0;
+}
+
+.line {
+    border-bottom: 0.5px solid #AEA1A1;
+    width: 66%;
+    margin-left: 38px;
+}
+
+.panel p {
+    margin-left: 38px;
+    margin-right: 33px;
+    margin-top: 2px;
+    margin-bottom: 0;
+}
+
+.price-text {
+    display: flex;
+    margin-left: 38px;
+    margin-top: 4px;
+}
+
+.panel p.orange-text {
+    font-family: 'Inter-Bold';
+    font-size: 15px;
+    line-height: 20px;
+    color: #E06733;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.panel p.black-text {
+    font-family: 'Inter-Regular';
+    font-size: 12px;
+    line-height: 20px;
+    color: #000000;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.button-panel {
+    margin-left: 38px;
+    width: 86px;
+    height: 25px;
+    font-family: 'Inter-Bold';
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #717171;
+    border-radius: 10px;
+    padding: 0;
+    border: none;
+    background-color: white;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.button-panel:hover {
+    border: 1px solid #E06733;
+}
+
+.button-panel:active {
+    background-color: #E06733;
+    color: #FFFFFF;
+    transition: 0.3s;
+}
+
+/*accordion finish*/
 
 .caption-price h2 {
     font-family: 'Inter-Bold';
@@ -341,13 +482,17 @@ h2 {
     font-size: 40px;
     line-height: 48px;
     color: #000000;
-    margin-right: 0;
+    margin: 0;
 }
 
 .help-price {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+.caption-help-price {
+    display: block;
 }
 
 .caption-help-price h2 {
@@ -358,10 +503,15 @@ h2 {
     color: #000000;
     margin-right: 0;
     text-align: end;
+    margin: 0;
 }
 
 .caption-help-price span {
     color: #499A18;
+}
+
+.caption-help-price768 {
+    display: none;
 }
 
 .button-price button {
@@ -377,7 +527,7 @@ h2 {
     border-radius: 5px;
     background-color: #FFFFFF;
     cursor: pointer;
-    margin-top: 8px;
+    margin-top: 44px;
 }
 
 .button-price button:hover {
@@ -387,12 +537,13 @@ h2 {
 }
 
 .img-price {
-    margin-right: -8px;
+    margin-top: 34px;
+    margin-right: -10px;
 }
 
 .contacts {
     background-color: #EDF2EC;
-    height: 542px;
+    height: 550px;
 }
 
 .contacts-wrapper {
@@ -401,9 +552,14 @@ h2 {
     justify-content: space-between;
 }
 
+.contacts-wrapper768 {
+    display: none;
+}
+
 .img-contacts {
-    margin-top: 28px;
+    margin-top: 36px;
     margin-left: -31px;
+    width: 33%;
 }
 
 .capture-contacts h2 {
@@ -418,45 +574,139 @@ h2 {
 }
 
 .capture-contacts {
-    margin-top: 2px;
+    margin-left: 77px;
+    width: 17%;
 }
+
+/*city*/
+/***********/
 
 .table-contacts {
-    margin-top: 134px;
+    margin-top: 149px;
+    width: 36.9%;
 }
 
-.table-contacts select {
+.select-city {
+    position: relative;
+}
+
+.name-select-city {
+    position: relative;
+    display: block;
+    text-align: left;
+    width: 100%;
     font-family: 'Inter-Regular';
     font-style: normal;
     font-size: 20px;
     line-height: 40px;
     color: #717171;
-    width: 450px;
-    height: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 0px;
-    border: none;
-    appearance: none;
     background: url("../assets/image/svg/contact-arrow-grey_btn.svg") no-repeat 92% center;
-    outline: 0;
-    background-color: #D6E7D2;
+    border: none;
+    height: 50px;
     padding-left: 21px;
     cursor: pointer;
 }
 
-.table-contacts select:hover {
+.name-select-city:hover,
+.name-select-city:active {
     border: 1px solid #D6E7D2;
     box-shadow: none;
     background: url("../assets/image/svg/arrow-green-up_btn.svg") no-repeat 92% center;
     background-color: #C1E698;
 }
 
-.table-contacts select:active {
-    border: 1px solid #D6E7D2;
-    box-shadow: none;
+.name-select-city:focus {
     background: url("../assets/image/svg/arrow-green-up_btn.svg") no-repeat 92% center;
     background-color: #C1E698;
 }
+
+.name-select-city--active {
+    background-color: #C1E698;
+}
+
+
+.city-list {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    background: #D6E7D2;
+    overflow: hidden;
+    width: 100%;
+    z-index: 1;
+    font-family: 'Inter-Regular';
+    font-style: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #717171;
+}
+
+.city-list--visible {
+    display: block;
+}
+
+.city-list-item {
+    padding: 13px 20px;
+    cursor: pointer;
+}
+
+.city-list-item:hover {
+    background: rgba(176, 198, 225, 0.26);
+}
+
+.city-input {
+    display: none;
+}
+
+.canandaiguacity,
+.new-york-city,
+.yonkers-city,
+.sherrill-city {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #000000;
+    border-radius: 20px;
+    font-family: 'Inter-Regular';
+    font-size: 16px;
+    height: 53%;
+    margin-top: 37px;
+}
+
+.city-adress {
+    display: flex;
+    margin-left: -103px;
+    margin-top: 17px;
+    gap: 30px;
+}
+
+.description-points p {
+    color: #717171;
+}
+
+.btn-city {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 122px;
+    height: 26px;
+    font-family: 'Inika-Bold';
+    font-size: 10px;
+    line-height: 13px;
+    color: #717171;
+    border: 1px solid #E06733;
+    border-radius: 5px;
+    background-color: #EDF2EC;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+
+/*city finish*/
 
 .footer {
     height: 132px;
@@ -468,7 +718,7 @@ h2 {
     margin: 0 7.569%;
     align-items: center;
     justify-content: space-between;
-    /*margin-top: 13px;*/
+    margin-top: -2px;
 }
 
 .year {
